@@ -49,7 +49,7 @@ uninstall-local:
 	rm -f $(DESTDIR)$(pkgconfdir)/dbus-session.conf
 	rm -f $(DESTDIR)$(localstatedir)/netatalk/README
 	rm -f $(DESTDIR)$(localstatedir)/netatalk/CNID/README
-if USE_DEBIAN
+if USE_DEBIAN_SYSV
 	rm -f $(DESTDIR)/etc/default/netatalk
 endif
 
